# NelderMead

./: .gitignore  CMakeLists.txt  NelderMeadReview.docx  README.md  buildme.bat  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  runtests.bat
NelderMead/: NelderMead.sln
NelderMead/NelderMead/: NelderMead.cpp  NelderMead.h  NelderMead.vcxproj  NelderMead.vcxproj.filters
NelderMead/Test/: Test.vcxproj  packages.config  tests.cpp
NelderMeadDLL/include/: NelderMead.h
NelderMeadDLL/src/: Parser.cpp
NelderMeadDLL/test/: tests.cpp
backend/: CMakeLists.txt
backend/include/: NelderMead.h  Parser.h  Point.h  Symplex.h
backend/src/: NelderMead.cpp  Parser.cpp  Point.cpp  Symplex.cpp
frontend/: CMakeLists.txt
frontend/src/: graphwindow.cpp  graphwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parametersdialog.cpp  parametersdialog.h
include/: NelderMead.h  Parser.h  framework.h
src/: CMakeLists.txt  NelderMead.cpp  Parser.cpp  library_init.cpp
test/: CMakeLists.txt  NelderMeadMethodTests.cpp  NelderMeadTestFixture.h  ParserExceptionsTests.cpp  ParserTestFixture.cpp  ParserTestFixture.h  ParserTests.cpp  tests.cpp
